@@ -1,13 +1,4 @@
 <SECTION>
-<FILE>enums</FILE>
-glUnitsType
-</SECTION>
-
-<SECTION>
-<FILE>libglabels</FILE>
-</SECTION>
-
-<SECTION>
 <FILE>paper</FILE>
 glPaper
 gl_paper_init
@@ -25,6 +16,29 @@ gl_paper_from_name
 gl_paper_lookup_id_from_name
 gl_paper_lookup_name_from_id
 gl_paper_print_known_papers
+</SECTION>
+
+<SECTION>
+<FILE>xml-paper</FILE>
+gl_xml_paper_read_papers_from_file
+gl_xml_paper_parse_papers_doc
+gl_xml_paper_parse_paper_node
+</SECTION>
+
+<SECTION>
+<FILE>enums</FILE>
+glUnitsType
+</SECTION>
+
+<SECTION>
+<FILE>xml-template</FILE>
+gl_xml_template_read_templates_from_file
+gl_xml_template_parse_templates_doc
+gl_xml_template_parse_template_node
+gl_xml_template_write_templates_to_file
+gl_xml_template_write_template_to_file
+gl_xml_template_create_templates_doc
+gl_xml_template_create_template_node
 </SECTION>
 
 <SECTION>
@@ -71,36 +85,27 @@ gl_template_print_aliases
 </SECTION>
 
 <SECTION>
-<FILE>xml-paper</FILE>
-gl_xml_paper_read_papers_from_file
-gl_xml_paper_parse_papers_doc
-gl_xml_paper_parse_paper_node
-</SECTION>
-
-<SECTION>
-<FILE>xml-template</FILE>
-gl_xml_template_read_templates_from_file
-gl_xml_template_parse_templates_doc
-gl_xml_template_parse_template_node
-gl_xml_template_write_templates_to_file
-gl_xml_template_write_template_to_file
-gl_xml_template_create_templates_doc
-gl_xml_template_create_template_node
+<FILE>libglabels</FILE>
 </SECTION>
 
 <SECTION>
 <FILE>xml</FILE>
 GL_XML_NAME_SPACE
+gl_xml_get_prop_string
+gl_xml_get_prop_i18n_string
 gl_xml_get_prop_double
 gl_xml_get_prop_boolean
 gl_xml_get_prop_int
 gl_xml_get_prop_uint
 gl_xml_get_prop_length
+gl_xml_set_prop_string
 gl_xml_set_prop_double
 gl_xml_set_prop_boolean
 gl_xml_set_prop_int
 gl_xml_set_prop_uint_hex
 gl_xml_set_prop_length
+gl_xml_is_node
+gl_xml_get_node_content
 gl_xml_set_default_units
 </SECTION>
 
